...
    <string name="snackbar_saved">Transaction saved!</string>
    <string name="total_number" translatable="false">%1$s</string>
    <string name="total_number_symbol" translatable="false">%1$s%2$s</string>
    <string name="transaction_account">Account</string>
    <string name="transaction_blank_hint" translatable="false"> </string>
    <string name="transaction_category">Category</string>
    <string name="transaction_date">Date</string>
    <string name="transaction_empty_title">"Transaction "</string>
    <string name="transaction_frequency">Frequency</string>
    <string name="transaction_memo">Memo</string>
    <string name="transaction_memo_hint">\u2517 Additional information</string>
    <string name="transaction_repeat">Repeat</string>
    <string name="transaction_title">Title</string>
    <string name="transaction_title_hint">\u2517 Location of purchase</string>
    <string name="transaction_total">Total</string>
    <string name="type_expense">Expense</string>
    <string name="type_income">Income</string>
    <string name="categories">Categories</string>
    <string name="alert_dialog_edit_account">Edit Account</string>
    <string name="alert_dialog_input_hint">Enter A Name</string>
    <string name="alert_dialog_create_account">Create Account</string>
...
    <string name="alert_dialog_duplicate_symbols_warning">The thousands and decimal separators cannot be the same, would you like to switch them?</string>
    <string name="accounts">Accounts</string>
    <string name="account_new">New Account</string>
    <string name="category_new">New Category</string>
    <string name="cfl_menu_transaction">New Transaction</string>
    <string name="transaction_save">Save Transaction</string>
    <string name="transaction">Transaction</string>
    <string name="cfl_overview">Overview</string>
    <string name="cfl_drawer_description">Open Navigation Drawer</string>
    <string name="navigate_back">Navigate Back</string>
    <string name="app_github_link" translatable="false">https://github.com/HeyZeusV/PlutusWallet</string>
    <string name="about_github" translatable="false">GitHub</string>
    <string name="preferences_theme">Theme</string>
    <string name="preferences_theme_light">Light</string>
    <string name="preferences_theme_dark">Dark</string>
...
    <string name="preferences_view_monthly">Monthly</string>
    <string name="preferences_view_weekly">Weekly</string>
    <string name="preferences_view_daily">Daily</string>

    <string name="tt_about_file" translatable="false">File %1$s</string>
    <string name="tt_ad" translatable="false">AlertDialog</string>
    <string name="tt_ad_confirm" translatable="false">AlertDialog Confirm</string>
    <string name="tt_ad_dismiss" translatable="false">AlertDialog Dismiss</string>
    <string name="tt_ad_option" translatable="false">AlertDialog Option %1$s</string>
    <string name="tt_ad_input" translatable="false">AlertDialog Input</string>
    <string name="tt_app_bar" translatable="false">AppBar</string>
    <string name="tt_app_barTitle" translatable="false">AppBar %1$s</string>
    <string name="tt_app_drawItem" translatable="false">DrawerItem %1$s</string>
    <string name="tt_app_scaffold" translatable="false">PWApp Scaffold</string>
    <string name="tt_chart_empty" translatable="false">Empty Chart for page %1$d</string>
    <string name="tt_chart_page" translatable="false">Chart Page %1$d</string>
    <string name="tt_chart_total" translatable="false">Chart Total for page %1$d</string>
    <string name="tt_chart_vp" translatable="false">Chart ViewPager</string>
    <string name="tt_filter_act" translatable="false">Filter Action</string>
    <string name="tt_filter_card" translatable="false">Filter Card</string>
...
    <string name="tt_filter_start" translatable="false">Filter Start Date</string>
    <string name="tt_filter_type" translatable="false">%1$s Button</string>
    <string name="tt_list_delete" translatable="false">%1$s Delete</string>
    <string name="tt_list_edit" translatable="false">%1$s Edit</string>
    <string name="tt_list_sub" translatable="false">List Subtitle %1$s</string>
    <string name="tt_list_vp" translatable="false">List ViewPager</string>
    <string name="tt_set_name" translatable="false">%1$s</string>
    <string name="tt_set_select" translatable="false">%1$s %2$s</string>
    <string name="tt_tran_ddmItem" translatable="false">DropdownMenuItem %1$s</string>
    <string name="tt_tranL_empty" translatable="false">Empty Transaction List</string>
    <string name="tt_tranL_item" translatable="false">TranList item %1$d</string>
</resources>
